rent and sell component merged

--- a/src/app/modules/dashboard/farmer/farmer.component.html
+++ b/src/app/modules/dashboard/farmer/farmer.component.html
@@ -3,18 +3,18 @@
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
-                    {{'farmer.sellAgri' | translate}}
+                    {{'farmer.purchase' | translate}}
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-sell></app-sell>
+            <app-shop></app-shop>
         </mat-expansion-panel>
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
-                    {{'farmer.rentMachines' | translate}}
+                    {{'farmer.sellRentAgri' | translate}}
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <app-rent></app-rent>
+            <app-sell></app-sell>
         </mat-expansion-panel>
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
