--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,12 +1,12 @@
 <div class="container team">
     <div class="row">
-        <div class="heading-title text-center">
+        <div class="heading-title text-center w3-animate-top">
             <h3 class="text-uppercase">{{'team.ourProfessionals' | translate}}
             </h3>
             <p class="p-top-30 half-txt">{{'team.slogan' | translate}}</p>
         </div>
 
-        <div class="col-md-6 col-sm-6">
+        <div class="col-md-6 col-sm-6 w3-animate-left">
             <div class="team-member">
                 <div class="team-img">
                     <img src="./assets/images/utkarsh.JPG" alt="Utkarsh"
@@ -30,7 +30,7 @@
                 <span>{{'team.utkarshRole' | translate}}</span>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6">
+        <div class="col-md-6 col-sm-6 w3-animate-right">
             <div class="team-member">
                 <div class="team-img">
                     <img src="./assets/images/rohan.jpeg" alt="Rohan"
@@ -54,7 +54,7 @@
                 <span>{{'team.rohanRole' | translate}}</span>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6">
+        <div class="col-md-6 col-sm-6 w3-animate-left">
             <div class="team-member">
                 <div class="team-img">
                     <img src="./assets/images/shivam.jpeg" alt="Shivam"
@@ -78,7 +78,7 @@
                 <span>{{'team.shivamRole' | translate}}</span>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6">
+        <div class="col-md-6 col-sm-6 w3-animate-right">
             <div class="team-member">
                 <div class="team-img">
                     <img src="./assets/images/abhishek.jpeg" alt="Abhishek"
@@ -107,4 +107,4 @@
 
 </div>
 
-<hr>
+<hr class="w3-animate-bottom">
