--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
@@ -1,40 +1,68 @@
-<!-- <table mat-table [dataSource]="dataSource" multiTemplateDataRows
-    class="mat-elevation-z8">
+<p (click)="getLocation()" class="get-location">Click to update location</p>
+
+<p class="booth-info" *ngIf="dataSource.data.length<=0">No nearby booths found!
+</p>
+
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows
+    class="mat-elevation-z8" *ngIf="dataSource.data.length>0">
     <ng-container matColumnDef="sNo">
         <th mat-header-cell *matHeaderCellDef> S. No. </th>
-        <td mat-cell *matCellDef="let element"> {{dataSource.filteredData.indexOf(element) + 1}} </td>
+        <td mat-cell *matCellDef="let element">
+            {{dataSource.filteredData.indexOf(element) + 1}} </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> S. No. </th>
+        <th mat-header-cell *matHeaderCellDef> Booth Name </th>
         <td mat-cell *matCellDef="let element"> {{element.booth.name}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> S. No. </th>
+    <ng-container matColumnDef="dist">
+        <th mat-header-cell *matHeaderCellDef> Distance from you </th>
         <td mat-cell *matCellDef="let element"> {{element.dist}} Kms </td>
-    </ng-container> -->
+    </ng-container>
 
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-    <!-- <ng-container matColumnDef="expandedDetail">
+    <ng-container matColumnDef="expandedDetail">
         <td mat-cell *matCellDef="let element"
             [attr.colspan]="columnsToDisplay.length">
             <div class="example-element-detail"
                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                 <div class="example-element-diagram">
-                    <div class="example-element-position">
+                    <!-- <div class="example-element-position">
                         {{dataSource.filteredData.indexOf(element) + 1}}
                     </div>
                     <div class="example-element-name"> {{element.booth.name}}
                     </div>
                     <div class="example-element-dist"> {{element.dist}} KMs
-                    </div>
+                    </div> -->
+                    <img
+                        [src]="'http://kisan-sewa-api.herokuapp.com/images/' + element.booth.profile">
                 </div>
                 <div class="example-element-description">
-                    {{element.booth.address}} -->
-                    <!-- <span class="example-element-description-attribution"> --
-                    Wikipedia </span> -->
-                <!-- </div>
+                    <tr>
+                        <td><strong>Booth name</strong></td>
+                        <td>{{element.booth.boothName}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Booth representative</strong></td>
+                        <td>{{element.booth.name}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Booth email</strong></td>
+                        <td>{{element.booth.email}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Booth phone</strong></td>
+                        <td>{{element.booth.phone}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Booth address</strong></td>
+                        <td>{{element.booth.address}}</td>
+                    </tr>
+                    <tr>
+                        <td>{{dataSource.data.length}}</td>
+                    </tr>
+                </div>
             </div>
         </td>
     </ng-container>
@@ -47,6 +75,6 @@
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
         class="example-detail-row"></tr>
-</table> -->
-
-<p>Booth works!</p>
+</table>
+<div style="padding-bottom: 30px;"></div>
+<!-- <p>Booth works!</p> -->
