--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
@@ -1,9 +1,21 @@
+.get-location {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 table {
   width: 100%;
 }
 
 tr.example-detail-row {
   height: 0;
+}
+
+tr.example-element-row {
+  cursor: pointer;
 }
 
 tr.example-element-row:not(.example-expanded-row):hover {
@@ -21,6 +33,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-detail {
   overflow: hidden;
   display: flex;
+  flex-direction: row;
 }
 
 .example-element-diagram {
@@ -29,5 +42,21 @@ tr.example-element-row:not(.example-expanded-row):active {
   padding: 8px;
   font-weight: lighter;
   margin: 8px 0;
-  height: 104px;
+  height: 100px;
+}
+
+.example-element-diagram img {
+  min-width: 80px;
+  height: 100px;
+}
+
+.example-element-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+}
+
+.example-element-description tr td {
+  width: 200px;
 }
