--- a/src/app/modules/dashboard/weather/weather.component.scss
+++ b/src/app/modules/dashboard/weather/weather.component.scss
@@ -5,3 +5,71 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+.loc-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.current {
+  display: flex;
+  flex-direction: column;
+}
+
+.sun {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+table {
+  width: 100%;
+}
+
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row {
+  cursor: pointer;
+}
+
+tr.example-element-row:not(.example-expanded-row):hover {
+  background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+}
+
+.example-element-diagram {
+  min-width: 80px;
+  border: 2px solid black;
+  padding: 8px;
+  font-weight: lighter;
+  margin: 8px 0;
+  height: 100px;
+}
+
+.example-element-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 50px;
+}
+
+.example-element-description tr td {
+  width: 200px;
+}
