--- a/src/app/modules/dashboard/weather/weather.component.html
+++ b/src/app/modules/dashboard/weather/weather.component.html
@@ -50,7 +50,51 @@
         </div>
     </div>
     <hr>
-    <div class="forecast">
-        forecast comes here
-    </div>
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows
+        class="mat-elevation-z8">
+        <ng-container matColumnDef="sNo">
+            <th mat-header-cell *matHeaderCellDef> S. No. </th>
+            <td mat-cell *matCellDef="let element">
+                {{dataSource.filteredData.indexOf(element) + 1}} </td>
+        </ng-container>
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element"
+                [attr.colspan]="columnsToDisplay.length">
+                <div class="example-element-description">
+                    <tr>
+                        <td><strong>Date</strong></td>
+                        <td>{{element.date * 1000 | date: 'dd/MM/yyyy'}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Day</strong></td>
+                        <td>{{element.day}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Minimum temperature</strong></td>
+                        <td>{{element.low}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Maximum temperature</strong></td>
+                        <td>{{element.high}}</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Condition</strong></td>
+                        <td>{{element.text}}</td>
+                    </tr>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']"
+            class="example-detail-row"></tr>
+    </table>
+    <div style="padding-bottom: 30px;"></div>
 </div>
