--- a/src/app/modules/dashboard/weather/weather.component.html
+++ b/src/app/modules/dashboard/weather/weather.component.html
@@ -58,10 +58,9 @@
                 {{dataSource.filteredData.indexOf(element) + 1}} </td>
         </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-        <ng-container matColumnDef="expandedDetail">
-            <td mat-cell *matCellDef="let element"
-                [attr.colspan]="columnsToDisplay.length">
+        <ng-container matColumnDef="details">
+            <th mat-header-cell *matHeaderCellDef> Details </th>
+            <td mat-cell *matCellDef="let element" style="padding: 20px 0px;">
                 <div class="example-element-description">
                     <tr>
                         <td><strong>Date</strong></td>
@@ -84,6 +83,14 @@
                         <td>{{element.text}}</td>
                     </tr>
                 </div>
+            </td>
+        </ng-container>
+
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+            <td mat-cell *matCellDef="let element"
+                [attr.colspan]="columnsToDisplay.length">
+
             </td>
         </ng-container>
 
