--- a/src/app/modules/dashboard/farmer/farmer.component.html
+++ b/src/app/modules/dashboard/farmer/farmer.component.html
@@ -33,7 +33,7 @@
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
-                    {{'farmer.viewWeather' | translate}}
+                    {{'common.viewWeather' | translate}}
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
@@ -43,7 +43,7 @@
         <mat-expansion-panel class="accor w3-animate-top">
             <mat-expansion-panel-header class="accor-head">
                 <mat-panel-title>
-                    {{'farmer.marketRate' | translate}}
+                    {{'common.marketRate' | translate}}
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
