--- a/src/app/shared/location/location.component.html
+++ b/src/app/shared/location/location.component.html
@@ -1,4 +1,4 @@
-<h2>Please pin your location</h2>
+<h2>{{'location.pin' | translate}}</h2>
 <agm-map [latitude]="lat" [longitude]="lon" [streetViewControl]="false"
     [mapTypeControl]="true" [fullscreenControl]="true"
     (mapClick)="placeMarker($event)">
@@ -7,7 +7,7 @@
 </agm-map>
 <div class="btns">
     <button (click)="onCancel()" mat-button
-        class="btn btn-default">Cancel</button>
+        class="btn btn-default">{{'common.cancel' | translate}}</button>
     <button (click)="onSubmit()" mat-button
-        class="btn btn-primary">Submit</button>
+        class="btn btn-primary">{{'common.submit' | translate}}</button>
 </div>
