--- a/src/app/modules/dashboard/market-rates/market-rates.component.html
+++ b/src/app/modules/dashboard/market-rates/market-rates.component.html
@@ -1,5 +1,5 @@
 <mat-form-field style="margin-top: 30px;">
-    <mat-label>{{'farmer.search' | translate}}</mat-label>
+    <mat-label>{{'common.search' | translate}}</mat-label>
     <input matInput (keyup)="applyFilter($event)"
         placeholder="{{'farmer.searchPlaceholder' | translate}}">
 </mat-form-field>
@@ -8,7 +8,7 @@
 
     <!-- S. no. Column -->
     <ng-container matColumnDef="sNo">
-        <th mat-header-cell *matHeaderCellDef> {{'farmer.sNo' | translate}}
+        <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}}
         </th>
         <td mat-cell *matCellDef="let element">
             {{dataSource.filteredData.indexOf(element) + 1}}</td>
@@ -16,7 +16,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> {{'farmer.name' | translate}}
+        <th mat-header-cell *matHeaderCellDef> {{'marketRate.name' | translate}}
         </th>
         <td mat-cell *matCellDef="let element">
             {{ storage.getCurrentLang()==='hi' ? element.nameHi : element.nameEn}}
@@ -26,13 +26,13 @@
     <!-- Local Rate -->
     <ng-container matColumnDef="localRate">
         <th mat-header-cell *matHeaderCellDef>
-            {{'farmer.localRate' | translate}} </th>
+            {{'marketRate.localRate' | translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.localRate}} </td>
     </ng-container>
 
     <!-- Average Rate -->
     <ng-container matColumnDef="avgRate">
-        <th mat-header-cell *matHeaderCellDef> {{'farmer.avgRate' | translate}}
+        <th mat-header-cell *matHeaderCellDef> {{'marketRate.avgRate' | translate}}
         </th>
         <td mat-cell *matCellDef="let element"> {{element.avgRate}} </td>
     </ng-container>
