--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
@@ -1,23 +1,23 @@
-<p (click)="getLocation()" class="get-location">Click to update location</p>
+<p (click)="getLocation()" class="get-location">{{'common.updateLocation' | translate}}</p>
 
-<p class="booth-info" *ngIf="dataSource.data.length<=0">No nearby booths found!
+<p class="booth-info" *ngIf="dataSource.data.length<=0">{{'nearBy.noBooth' | translate}}
 </p>
 
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows
     class="mat-elevation-z8" *ngIf="dataSource.data.length>0">
     <ng-container matColumnDef="sNo">
-        <th mat-header-cell *matHeaderCellDef> S. No. </th>
+        <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}} </th>
         <td mat-cell *matCellDef="let element">
             {{dataSource.filteredData.indexOf(element) + 1}} </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Booth Name </th>
+        <th mat-header-cell *matHeaderCellDef> {{'nearBy.boothName' | translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.booth.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dist">
-        <th mat-header-cell *matHeaderCellDef> Distance from you </th>
+        <th mat-header-cell *matHeaderCellDef> {{'nearBy.dist' | translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.dist}} Kms </td>
     </ng-container>
 
@@ -40,23 +40,23 @@
                 </div>
                 <div class="example-element-description">
                     <tr>
-                        <td><strong>Booth name</strong></td>
+                        <td><strong>{{'nearBy.boothName' | translate}}</strong></td>
                         <td>{{element.booth.boothName}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Booth representative</strong></td>
+                        <td><strong>{{'nearBy.boothRepr' | translate}}</strong></td>
                         <td>{{element.booth.name}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Booth email</strong></td>
+                        <td><strong>{{'nearBy.boothEmail' | translate}}</strong></td>
                         <td>{{element.booth.email}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Booth phone</strong></td>
+                        <td><strong>{{'nearBy.boothPhone' | translate}}</strong></td>
                         <td>{{element.booth.phone}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Booth address</strong></td>
+                        <td><strong>{{'nearBy.boothAdd' | translate}}</strong></td>
                         <td>{{element.booth.address}}</td>
                     </tr>
                 </div>
