--- a/src/app/modules/dashboard/weather/weather.component.html
+++ b/src/app/modules/dashboard/weather/weather.component.html
@@ -1,51 +1,51 @@
-<p (click)="getLocation()" class="get-location">Click to update location</p>
-<p *ngIf="!weather">No weather data found!</p>
+<p (click)="getLocation()" class="get-location">{{'common.updateLocation' | translate}}</p>
+<p *ngIf="!weather">{{'weather.noWeather' | translate}}</p>
 <div *ngIf="weather">
-    <h4><strong>Weather forecast for</strong></h4>
+    <h4><strong>{{'weather.weatherFor' | translate}}</strong></h4>
     <p class="loc-info">
         <span>{{weather.location.city}}, {{weather.location.region}},
             {{weather.location.country}}.
         </span>
-        <span><strong>Latitude:</strong>
+        <span><strong>{{'weather.lat' | translate}}</strong>
             {{weather.location.lat}},
-            <strong>Longitude:</strong> {{weather.location.long}},
-            <strong>Timezone:</strong>
+            <strong>{{'weather.lon' | translate}}</strong> {{weather.location.long}},
+            <strong>{{'weather.time' | translate}}</strong>
             {{weather.location.timezone_id}}
         </span>
     </p>
     <hr>
-    <h4><strong>Current weather conditions</strong></h4>
+    <h4><strong>{{'weather.currentWeather' | translate}}</strong></h4>
     <div class="current">
         <div class="sun">
-            <span><strong>Sunrise:</strong>
+            <span><strong>{{'weather.sunrise' | translate}}</strong>
                 {{weather.current_observation.astronomy.sunrise}}</span>
-            <span><strong>Sunset:</strong>
+            <span><strong>{{'weather.sunset' | translate}}</strong>
                 {{weather.current_observation.astronomy.sunset}}</span>
         </div>
         <div class="sun">
-            <span><strong>Condition:</strong>
+            <span><strong>{{'weather.cond' | translate}}</strong>
                 {{weather.current_observation.condition.text}}</span>
-            <span><strong>Temperature:</strong>
+            <span><strong>{{'weather.temp' | translate}}</strong>
                 {{weather.current_observation.condition.temperature}}
                 &#8451;</span>
         </div>
         <div class="sun">
-            <span><strong>Wind speed:</strong>
-                {{weather.current_observation.wind.speed}} KMPH</span>
-            <span><strong>Wind direction:</strong>
+            <span><strong>{{'weather.speed' | translate}}</strong>
+                {{weather.current_observation.wind.speed}} {{'weather.kmph' | translate}}</span>
+            <span><strong>{{'weather.dir' | translate}}</strong>
                 {{weather.current_observation.wind.direction}}<sup>&#8728;</sup></span>
         </div>
         <div class="sun">
-            <span><strong>Humidity:</strong>
+            <span><strong>{{'weather.humid' | translate}}</strong>
                 {{weather.current_observation.atmosphere.humidity}}%</span>
-            <span><strong>Pressure:</strong>
+            <span><strong>{{'weather.pres' | translate}}</strong>
                 {{weather.current_observation.atmosphere.pressure}}
-                millibars</span>
+                {{'weather.mb' | translate}}</span>
         </div>
         <div class="sun">
-            <span><strong>Visibilty:</strong>
-                {{weather.current_observation.atmosphere.visibility}} KMs</span>
-            <span><strong>Last updated at:</strong>
+            <span><strong>{{'weather.visib' | translate}}</strong>
+                {{weather.current_observation.atmosphere.visibility}} {{'weather.km' | translate}}</span>
+            <span><strong>{{'weather.lastUpdate' | translate}}</strong>
                 {{weather.current_observation.pubDate * 1000 | date: 'dd/MM/yyyy h:mm:ss a'}}</span>
         </div>
     </div>
@@ -53,33 +53,33 @@
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows
         class="mat-elevation-z8">
         <ng-container matColumnDef="sNo">
-            <th mat-header-cell *matHeaderCellDef> S. No. </th>
+            <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}} </th>
             <td mat-cell *matCellDef="let element">
                 {{dataSource.filteredData.indexOf(element) + 1}} </td>
         </ng-container>
 
         <ng-container matColumnDef="details">
-            <th mat-header-cell *matHeaderCellDef> Details </th>
+            <th mat-header-cell *matHeaderCellDef> {{'weather.details' | translate}} </th>
             <td mat-cell *matCellDef="let element" style="padding: 20px 0px;">
                 <div class="example-element-description">
                     <tr>
-                        <td><strong>Date</strong></td>
+                        <td><strong>{{'weather.date' | translate}}</strong></td>
                         <td>{{element.date * 1000 | date: 'dd/MM/yyyy'}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Day</strong></td>
+                        <td><strong>{{'weather.day' | translate}}</strong></td>
                         <td>{{element.day}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Minimum temperature</strong></td>
+                        <td><strong>{{'weather.minTemp' | translate}}</strong></td>
                         <td>{{element.low}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Maximum temperature</strong></td>
+                        <td><strong>{{'weather.maxTemp' | translate}}</strong></td>
                         <td>{{element.high}}</td>
                     </tr>
                     <tr>
-                        <td><strong>Condition</strong></td>
+                        <td><strong>{{'weather.condition' | translate}}</strong></td>
                         <td>{{element.text}}</td>
                     </tr>
                 </div>
