weather component corrected

--- a/src/app/modules/dashboard/weather/weather.component.html
+++ b/src/app/modules/dashboard/weather/weather.component.html
@@ -50,6 +50,7 @@
         </div>
     </div>
     <hr>
+    <h4><strong>{{'weather.forecast' | translate}}</strong></h4>
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows
         class="mat-elevation-z8">
         <ng-container matColumnDef="sNo">
