--- a/src/app/modules/dashboard/weather/weather.component.scss
+++ b/src/app/modules/dashboard/weather/weather.component.scss
@@ -69,3 +69,40 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description tr td {
   width: 200px;
 }
+
+@media (max-width: 660px) {
+  .loc-info {
+    flex-direction: column;
+  }
+  .loc-span {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .loc-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 600px) {
+  .sun {
+    flex-direction: column;
+  }
+  .sun-flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .td {
+    text-align: right;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 390px) {
+  .tr{
+    border-bottom: dashed 0.4px;
+  }
+}
