--- a/src/app/modules/dashboard/market-rates/market-rates.component.html
+++ b/src/app/modules/dashboard/market-rates/market-rates.component.html
@@ -1,44 +1,58 @@
-<mat-form-field style="margin-top: 30px;">
-    <mat-label>{{'common.search' | translate}}</mat-label>
-    <input matInput (keyup)="applyFilter($event)"
-        placeholder="{{'farmer.searchPlaceholder' | translate}}">
-</mat-form-field>
+<div class="get-location"><a
+        (click)="getLocation()">{{'common.updateLocation' | translate}}</a>
+</div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<p class="booth-info" *ngIf="dataSource.data.length<=0">
+    {{'marketRate.noMarketRate' | translate}}
+</p>
 
-    <!-- S. no. Column -->
-    <ng-container matColumnDef="sNo">
-        <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}}
-        </th>
-        <td mat-cell *matCellDef="let element">
-            {{dataSource.filteredData.indexOf(element) + 1}}</td>
-    </ng-container>
+<div *ngIf="dataSource.data.length>0">
+    <mat-form-field>
+        <mat-label>{{'common.search' | translate}}</mat-label>
+        <input matInput (keyup)="applyFilter($event)"
+            placeholder="{{'marketRate.searchPlaceholder' | translate}}">
+    </mat-form-field>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> {{'marketRate.name' | translate}}
-        </th>
-        <td mat-cell *matCellDef="let element">
-            {{ storage.getCurrentLang()==='hi' ? element.nameHi : element.nameEn}}
-        </td>
-    </ng-container>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Local Rate -->
-    <ng-container matColumnDef="localRate">
-        <th mat-header-cell *matHeaderCellDef>
-            {{'marketRate.localRate' | translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.localRate}} </td>
-    </ng-container>
+        <!-- S. no. Column -->
+        <ng-container matColumnDef="sNo">
+            <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{dataSource.filteredData.indexOf(element) + 1}}</td>
+        </ng-container>
 
-    <!-- Average Rate -->
-    <ng-container matColumnDef="avgRate">
-        <th mat-header-cell *matHeaderCellDef> {{'marketRate.avgRate' | translate}}
-        </th>
-        <td mat-cell *matCellDef="let element"> {{element.avgRate}} </td>
-    </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef>
+                {{'marketRate.name' | translate}}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                {{ storage.getCurrentLang()==='hi' ? element.nameHi : element.nameEn}}
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-    </tr>
-</table>
-<div style="padding-bottom: 30px;"></div>
+        <!-- Local Rate -->
+        <ng-container matColumnDef="localRate">
+            <th mat-header-cell *matHeaderCellDef>
+                {{'marketRate.localRate' | translate}} </th>
+            <td mat-cell *matCellDef="let element">&#8377; {{element.localRate}}
+            </td>
+        </ng-container>
+
+        <!-- Average Rate -->
+        <ng-container matColumnDef="avgRate">
+            <th mat-header-cell *matHeaderCellDef>
+                {{'marketRate.avgRate' | translate}}
+            </th>
+            <td mat-cell *matCellDef="let element">&#8377; {{element.avgRate}}
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+        </tr>
+    </table>
+    <div style="padding-bottom: 30px;"></div>
+</div>
