--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.html
@@ -1,24 +1,31 @@
-<p (click)="getLocation()" class="get-location">{{'common.updateLocation' | translate}}</p>
+<div class="get-location"><a
+        (click)="getLocation()">{{'common.updateLocation' | translate}}</a>
+</div>
 
-<p class="booth-info" *ngIf="dataSource.data.length<=0">{{'nearBy.noBooth' | translate}}
+<p class="booth-info" *ngIf="dataSource.data.length<=0">
+    {{'nearBy.noBooth' | translate}}
 </p>
 
 <table mat-table [dataSource]="dataSource" multiTemplateDataRows
     class="mat-elevation-z8" *ngIf="dataSource.data.length>0">
     <ng-container matColumnDef="sNo">
-        <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}} </th>
+        <th mat-header-cell *matHeaderCellDef> {{'common.sNo' | translate}}
+        </th>
         <td mat-cell *matCellDef="let element">
             {{dataSource.filteredData.indexOf(element) + 1}} </td>
     </ng-container>
 
     <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> {{'nearBy.boothName' | translate}} </th>
+        <th mat-header-cell *matHeaderCellDef>
+            {{'nearBy.boothName' | translate}} </th>
         <td mat-cell *matCellDef="let element"> {{element.booth.name}} </td>
     </ng-container>
 
     <ng-container matColumnDef="dist">
-        <th mat-header-cell *matHeaderCellDef> {{'nearBy.dist' | translate}} </th>
-        <td mat-cell *matCellDef="let element"> {{element.dist}} Kms </td>
+        <th mat-header-cell *matHeaderCellDef> {{'nearBy.dist' | translate}}
+        </th>
+        <td mat-cell *matCellDef="let element"> {{element.dist}}
+            {{'nearBy.km' | translate}} </td>
     </ng-container>
 
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
@@ -40,23 +47,28 @@
                 </div>
                 <div class="example-element-description">
                     <tr>
-                        <td><strong>{{'nearBy.boothName' | translate}}</strong></td>
+                        <td><strong>{{'nearBy.boothName' | translate}}</strong>
+                        </td>
                         <td>{{element.booth.boothName}}</td>
                     </tr>
                     <tr>
-                        <td><strong>{{'nearBy.boothRepr' | translate}}</strong></td>
+                        <td><strong>{{'nearBy.boothRepr' | translate}}</strong>
+                        </td>
                         <td>{{element.booth.name}}</td>
                     </tr>
                     <tr>
-                        <td><strong>{{'nearBy.boothEmail' | translate}}</strong></td>
+                        <td><strong>{{'nearBy.boothEmail' | translate}}</strong>
+                        </td>
                         <td>{{element.booth.email}}</td>
                     </tr>
                     <tr>
-                        <td><strong>{{'nearBy.boothPhone' | translate}}</strong></td>
+                        <td><strong>{{'nearBy.boothPhone' | translate}}</strong>
+                        </td>
                         <td>{{element.booth.phone}}</td>
                     </tr>
                     <tr>
-                        <td><strong>{{'nearBy.boothAdd' | translate}}</strong></td>
+                        <td><strong>{{'nearBy.boothAdd' | translate}}</strong>
+                        </td>
                         <td>{{element.booth.address}}</td>
                     </tr>
                 </div>
