--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
@@ -2,8 +2,11 @@
   text-align: center;
   margin-top: 30px;
   margin-bottom: 20px;
-  cursor: pointer;
   text-decoration: underline;
+}
+
+.get-location a {
+  cursor: pointer;
 }
 
 table {
