--- a/src/app/modules/dashboard/farmer/farmer.component.scss
+++ b/src/app/modules/dashboard/farmer/farmer.component.scss
@@ -12,3 +12,13 @@
 .mat-expansion-panel-header.mat-expanded {
   background-color: #33a3ff !important;
 }
+
+.shop {
+  text-align: center;
+  padding: 30px 0px;
+  font-size: 20px;
+}
+
+.shop a {
+  text-decoration: underline;
+}
