--- a/src/app/modules/dashboard/farmer/farmer.component.html
+++ b/src/app/modules/dashboard/farmer/farmer.component.html
@@ -7,7 +7,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
-                <app-shop></app-shop>
+                <div class="shop"><a [routerLink]="['/dashboard/shop']">Take me to the shop</a>  &#8658;</div>
             </ng-template>
         </mat-expansion-panel>
         <mat-expansion-panel class="accor w3-animate-top">
