--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,11 +2,71 @@
   background-color: rgb(177, 177, 177);
 }
 
-.lang{
+.lang {
   padding-top: 50px;
   text-align: center;
   font-weight: bold;
   text-decoration: underline;
+}
+
+.lang a {
+  -moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
+  -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
+  box-shadow: 0px 1px 0px 0px #f0f7fa;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #33bdef),
+    color-stop(1, #019ad2)
+  );
+  background: -moz-linear-gradient(center top, #33bdef 5%, #019ad2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bdef', endColorstr='#019ad2');
+  background-color: #000000;
+  -webkit-border-top-left-radius: 6px;
+  -moz-border-radius-topleft: 6px;
+  border-top-left-radius: 6px;
+  -webkit-border-top-right-radius: 6px;
+  -moz-border-radius-topright: 6px;
+  border-top-right-radius: 6px;
+  -webkit-border-bottom-right-radius: 6px;
+  -moz-border-radius-bottomright: 6px;
+  border-bottom-right-radius: 6px;
+  -webkit-border-bottom-left-radius: 6px;
+  -moz-border-radius-bottomleft: 6px;
+  border-bottom-left-radius: 6px;
+  text-indent: 0;
+  border: 1px solid #057fd0;
+  display: inline-block;
+  color: #ffffff;
+  font-family: arial;
+  font-size: 15px;
+  font-weight: bold;
+  font-style: normal;
+  height: 50px;
+  line-height: 50px;
+  text-decoration: none;
+  text-align: center;
+  text-shadow: 0px -1px 0px #5b6178;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.lang a:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #2c363a),
+    color-stop(1, #000000)
+  );
+  background: -moz-linear-gradient(center top, #2c363a 5%, #000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2c363a', endColorstr='#000000');
+  background-color: #2c363a;
+}
+.lang a:active {
+  position: relative;
+  top: 1px;
 }
 
 .footer {
@@ -16,16 +76,16 @@
   padding: 50px 0px;
 }
 
-.foot-left{
+.foot-left {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.follow{
+.follow {
   font-size: 20px;
   font-weight: bold;
-  font-family: "Founders Grotesk Text","Work Sans",sans-serif;
+  font-family: "Founders Grotesk Text", "Work Sans", sans-serif;
 }
 
 .about-icons {
@@ -60,7 +120,7 @@
   transition: all 0.001s;
 }
 
-.foot-right{
+.foot-right {
   display: flex;
   flex-direction: row;
   align-items: center;
