nearby booth table css corrected

--- a/src/app/modules/dashboard/weather/weather.component.scss
+++ b/src/app/modules/dashboard/weather/weather.component.scss
@@ -102,6 +102,9 @@ tr.example-element-row:not(.example-expanded-row):active {
     text-align: right;
     padding-right: 20px;
   }
+  .tr {
+    vertical-align: middle;
+  }
 }
 
 @media (max-width: 390px) {
