--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
@@ -40,7 +40,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .example-element-diagram {
-  min-width: 80px;
+  // min-width: 80px;
   border: 2px solid black;
   padding: 8px;
   font-weight: lighter;
@@ -49,7 +49,7 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .example-element-diagram img {
-  min-width: 80px;
+  // min-width: 80px;
   height: 100px;
 }
 
@@ -62,4 +62,34 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .example-element-description tr td {
   width: 200px;
+}
+
+.small {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .large {
+    display: none;
+  }
+  .small {
+    display: table;
+  }
+}
+
+@media (max-width: 620px) {
+  .td {
+    text-align: right;
+    padding-right: 20px;
+  }
+  .tr{
+    vertical-align: middle;
+  }
+}
+
+@media (max-width: 500px) {
+  .tr{
+    border-bottom: dashed 0.4px;
+    vertical-align: middle;
+  }
 }
