--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -32,12 +32,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
 }
-hr{
+hr {
   width: 80%;
   border-top: 1px solid gray;
   margin: 0 auto;
 }
-.team{
+.team {
   margin-top: 50px;
 }
 .heading-title {
@@ -69,7 +69,7 @@ hr{
 .team-member .team-img {
   position: relative;
 }
-.team-img{
+.team-img {
   height: 350px;
 }
 .team-member {
@@ -171,28 +171,31 @@ hr{
 }
 
 @media (max-width: 1199px) {
-  .team-img, .team-img img{
+  .team-img,
+  .team-img img {
     height: 350px;
   }
-  .team-img img{
+  .team-img img {
     width: 100%;
   }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-  .team-img, .team-img img{
+  .team-img,
+  .team-img img {
     height: 270px;
   }
-  .team-img img{
+  .team-img img {
     width: 100%;
   }
 }
 
 @media (max-width: 400px) {
-  .team-img, .team-img img{
+  .team-img,
+  .team-img img {
     height: 230px;
   }
-  .team-img img{
+  .team-img img {
     width: 100%;
   }
 }
