--- a/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
+++ b/src/app/modules/dashboard/nearby-booths/nearby-booths.component.scss
@@ -68,12 +68,19 @@ tr.example-element-row:not(.example-expanded-row):active {
   display: none;
 }
 
+.extra-small {
+  display: none;
+}
+
 @media (max-width: 768px) {
   .large {
     display: none;
   }
   .small {
     display: table;
+  }
+  tr.example-element-row {
+    cursor: default;
   }
 }
 
@@ -82,14 +89,26 @@ tr.example-element-row:not(.example-expanded-row):active {
     text-align: right;
     padding-right: 20px;
   }
-  .tr{
+  .tr {
     vertical-align: middle;
   }
 }
 
 @media (max-width: 500px) {
-  .tr{
+  .tr {
     border-bottom: dashed 0.4px;
     vertical-align: middle;
+  }
+}
+
+@media (max-width: 450px) {
+  .small {
+    display: none;
+  }
+  .extra-small {
+    display: table;
+  }
+  .example-element-description tr td {
+    width: unset;
   }
 }
